# resharp_rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: README.md  comparative_benchmarks.rs  rebar_benchmarks.rs  resharp_fsharp_benchmark.fsx
examples/: test_alt.rs  test_anchor.rs  test_posix.rs  validation.rs
src/: algorithm.rs  builder.rs  charset.rs  engine.rs  lib.rs  parser.rs  types.rs
tests/: regex_test_suite.rs
