[package]
name = "resharp_rs"
version = "0.1.0"
edition = "2021"
authors = ["Carter Schultz <carterjschultz@gmail.com>"]
description = "A high-performance, automata-based regex engine with intersection and complement operations"
license = "MIT"
repository = "https://github.com/Carter12s/resharp_rs"
keywords = ["regex", "dfa", "automata", "intersection", "complement"]
categories = ["text-processing"]

[dependencies]
memchr = "2.8"
rustc-hash = "2.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
regex = "1.12"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"

[[bench]]
name = "rebar_benchmarks"
harness = false

[[bench]]
name = "comparative_benchmarks"
harness = false
